force-app/main/default/objects/Decision__c/Decision__c.object-meta.xml
<CustomObject>
    <label>Decision</label>
    <nameField>
        <label>Decision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>