force-app/main/default/objects/Decision__c/fields/DecisionMaker__c.field-meta.xml
<CustomField>
    <fullName>DecisionMaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision Maker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>