force-app/main/default/objects/Decision__c/fields/IssueRisk__c.field-meta.xml
<CustomField>
    <fullName>IssueRisk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue / Risk</label>
    <referenceTo>IssueRisk__c</referenceTo>
    <relationshipLabel>Decisions</relationshipLabel>
    <relationshipName>Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>