force-app/main/default/objects/Decision__c/fields/WorkItemUS__c.field-meta.xml
<CustomField>
    <fullName>WorkItemUS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>WorkItem__c</referenceTo>
    <relationshipLabel>Decisions</relationshipLabel>
    <relationshipName>Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>