force-app/main/default/objects/Decision__c/listViews/Decisions.listView-meta.xml
<ListView>
    <fullName>Decisions</fullName>
    <columns>Id__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>DecisionMaker__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Decisions</label>
</ListView>